test/scripted/compilation2/errors/cannot_use_in_try.bnj
# test:error 4:18 "type 'i32' is not a result or optional type"

func main() {
    try value in 100 {}
}